# PN2HDA

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
examples/: auto-concurrent-example.pnml  simple-example.pnml
include/: command_line.h  hashtbl.h  hda.h  logger.h  pair.h  petri_nets.h  vector.h
src/: main.c
src/command_line/: parse_args.c
src/hda/: convert.c  hda.c
src/logger/: logger.c
src/parse_pnml/: parse_pnml.c
src/petri_nets/: parser.c  petri_nets.c
src/utils/: hashtbl.c  pair.c  vector.c
